2014-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation
2014-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'CmdSwitch' class in 'syd/cmdswitch.cpp'
	and 'syd/cmdswitch.h'.
	* Added a 'Profile' class in 'syd/profile.cpp'
	and 'syd/profile.h'.
2014-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Routing' class in 'syd/routing.cpp' and
	'syd/routing.h'.
2014-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Implemented an LWRP server in 'syd/lwpr.cpp' and
	'syd/lwrp.h'.
2014-06-27 Fred Gleason <fredg@paravelsystems.com>
	* Implemented RTP relaying in 'syd/rtp.cpp' and 'syd/rtp.h'.