@@ -13,3 +13,6 @@
 	'syd/lwrp.h'.
 2014-06-27 Fred Gleason <fredg@paravelsystems.com>
 	* Implemented RTP relaying in 'syd/rtp.cpp' and 'syd/rtp.h'.
+2014-06-27 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a bug in 'syd/lwtag.cpp' where type 8 tags were not
+	initialized properly.
